--- a/money-for-rabbit/src/index.css
+++ b/money-for-rabbit/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400&display=swap');
 @font-face {
   font-family: 'BMDOHYEON';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff')
@@ -27,4 +28,11 @@ code {
 p,
 h1 {
   margin: 0;
+}
+
+input[type='password'] {
+  font-family: 'Nanum Gothic', sans-serif !important;
+}
+input[type='password']::placeholder {
+  font-family: 'BMDOHYEON';
 }
