:lipstick: (halam/#160) background 색 컨셉에 맞게 변경

--- a/money-for-rabbit/src/index.css
+++ b/money-for-rabbit/src/index.css
@@ -6,12 +6,14 @@
   font-weight: normal;
   font-style: normal;
 }
+
 * {
   font-family: 'BMDOHYEON';
 }
 
 body {
   margin: 0;
+  background-color: #ecd189;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
